--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "epfl.ch.droneproject"
+        applicationId "ch.epfl.droneproject"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
