--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
             android:name=".activity.SkyControllerActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity android:name=".activity.UsbAccessoryActivityImpl" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
