--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import com.android.build.gradle.tasks.NdkCompile
+
 apply plugin: 'com.android.application'
 
 android {
@@ -11,12 +13,36 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    sourceSets.main {
+        jni.srcDirs = [] //disable automatic ndk-build call
+    }
+
+    tasks.withType(NdkCompile) {
+        compileTask -> compileTask.enabled = false
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    task ndkBuild(type: Exec, description: 'Compile JNI source via NDK') {
+
+        def ndkDir = "/usr/lib/android-sdk/ndk-bundle"
+        commandLine "$ndkDir/ndk-build",
+                'NDK_PROJECT_PATH=build',
+                'APP_BUILD_SCRIPT=src/main/jni/Android.mk',
+                'NDK_APPLICATION_MK=src/main/jni/Application.mk',
+                'NDK_APP_LIBS_OUT = src/main/jniLibs'
+    }
+
+    tasks.withType(JavaCompile) {
+        compileTask -> compileTask.dependsOn ndkBuild
+    }
+
     sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs/'] } }
 }
 
