--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+/*
     task ndkBuild(type: Exec, description: 'Compile JNI source via NDK') {
 
         def ndkDir = "/usr/lib/android-sdk/ndk-bundle"
@@ -42,7 +42,7 @@ android {
     tasks.withType(JavaCompile) {
         compileTask -> compileTask.dependsOn ndkBuild
     }
-
+*/
     sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs/'] } }
 }
 
@@ -53,9 +53,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile group: 'org.bytedeco', name: 'javacv-platform', version: '1.3.3'
     compile 'com.parrot:arsdk:3.12.6'
     compile 'com.android.support:design:26.+'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     testCompile 'junit:junit:4.12'
-    compile project(':openCVLibrary330')
+    //compile project(':openCVLibrary330')
 }
