--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,28 +22,17 @@ android {
         main { jni.srcDirs = ['src/main/jniLibs/'] }
     }
 }
-/*
-repositories {
-    jcenter()
-}
-*/
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
+    //compile 'com.google.android.gms:play-services-maps:11.0.4'
+    //compile 'com.google.android.gms:play-services-maps:11.4.0'
+    compile 'com.google.android.gms:play-services-maps:11.6.0'
     compile 'com.parrot:arsdk:3.12.6'
 
-   // compile 'com.getkeepsafe.relinker:relinker:1.2.3'
-/*
-    compile group: 'org.bytedeco', name: 'javacv', version: '1.3.1'
-    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '2.4.11-0.11', classifier: 'android-arm'
-    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '2.4.11-0.11', classifier: 'android-x86'
-
-    compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '2.6.1-0.11', classifier: 'android-arm'
-    compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '2.6.1-0.11', classifier: 'android-x86'
-*/
     compile files('libs/javacv.jar')
     compile files('libs/javacpp.jar')
     compile files('libs/opencv.jar')
