--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //compile 'com.google.android.gms:play-services-maps:11.0.4'
-    //compile 'com.google.android.gms:play-services-maps:11.4.0'
     compile 'com.google.android.gms:play-services-maps:11.6.0'
     compile 'com.parrot:arsdk:3.12.6'
 
+    compile files('libs/activation.jar')
+    compile files('libs/additionnal.jar')
     compile files('libs/javacv.jar')
     compile files('libs/javacpp.jar')
     compile files('libs/opencv.jar')
